--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEWS APP</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/image/logo.png">
+    <link rel="icon" href="image/logo.png">
 </head>
 
 <body>
     <nav>
         <div class="main-nav container flex">
             <a href="#" onclick="reload()" class="company-logo">
-                <img src="/image/logo.png" alt="company logo">
+                <img src="image/logo.png" alt="company logo">
             </a>
             <div class="nav-links">
                 <ul class="flex">
